Fixed table text alignment

--- a/core/static/core/css/table.css
+++ b/core/static/core/css/table.css
@@ -39,7 +39,9 @@
 .table td {
     padding: 1em;
     font-weight: normal;
+    text-align: left;
 }
+
 
 .table tbody tr {
     border-bottom: 1px solid var(--line-color);
